<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_properties">

    <fragment
        android:id="@+id/navigation_properties"
        android:name="com.example.rnroomrent.ui.properties.PropertiesFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_properties" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.rnroomrent.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_account_setting"
        android:name="com.example.rnroomrent.ui.account_setting.AccountSettingFragment"
        android:label="@string/title_account_setting"
        tools:layout="@layout/fragment_account_setting" />
</navigation>